--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,14 @@ amplify-build-config.json
 amplify-gradle-config.json
 amplifytools.xcconfig
 .secret-*
+
+.idea/
+.vscode/
+build
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+/.changelog
+.npm/
+yarn.lock
